@@ -1,3 +1,9 @@
+2007-08-10  David Lawrence Ramsey  <pooka109@gmail.com>
+
+	* utils.c (ngetdelim): Simplify.
+	* utils.c (ngetline, ngetdelim): Update copyright notice to
+	account for modifications.
+
 2007-08-07  David Lawrence Ramsey  <pooka109@gmail.com>
 
 	* nano.c (copy_from_file): Fix potential segfault, found by Paul
